--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,16 +43,16 @@ nav:
           - Fotos herunterladen: user-guide/organize/download.md
           - Fotos bearbeiten: user-guide/organize/edit.md
       - Backup:
-          - Verbindung via WebDAV:  user-guide/backup/webdav.md
-          - Nextcloud Sync:  user-guide/backup/nextcloud.md
+          - Verbindung via WebDAV:  user-guide/sync/webdav.md
       - Teilen:
           - Album über Link teilen: user-guide/share/share.md
       - Einstellungen:
+          - Allgemein: user-guide/settings/general.md
           - Dateien: user-guide/settings/library.md
-          - Benutzeroberfläche: user-guide/settings/ui.md
+          - Erweitert: user-guide/settings/advanced.md
+          - Sync:  user-guide/settings/sync.md
           - Konto: user-guide/settings/account.md
-          - Places: user-guide/settings/places.md
-          - Thumbnails: user-guide/settings/thumbnails.md
+          #- Places: user-guide/settings/places.md
       - Anwendungsfälle:
           - Dateien aus Google Photos exportieren: user-guide/use-cases/google.md
           - Dateien aus Flickr exportieren: user-guide/use-cases/flickr.md
