--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,7 @@ nav:
           - Fotos herunterladen: user-guide/organize/download.md
           - Fotos bearbeiten: user-guide/organize/edit.md
           - Fotos löschen: user-guide/organize/delete.md
-      - Backup:
+      - Sync & Backup:
           - Verbindung via WebDAV:  user-guide/sync/webdav.md
           - Backup von Smartphones:  user-guide/sync/sync-phone.md
       - Teilen:
