--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
           - Privat: user-guide/organize/private.md
           - Archiv: user-guide/organize/archive.md
           - Alben: user-guide/organize/albums.md
+          - Personen: user-guide/organize/people.md
           - Ordner: user-guide/organize/folders.md
           - Kategorien: user-guide/organize/labels.md
           - Karten: user-guide/organize/places.md
