Site: Update mkdocs.yml and main.html

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,7 +100,7 @@ site_dir: site
 # Project information.
 site_name: PhotoPrism
 site_description: Dokumentation
-site_author: PhotoPrism.org
+site_author: PhotoPrism
 site_url: https://docs-de.photoprism.app/
 
 # Repository information.
