--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,7 @@ extra_css:
 
 # External links.
 extra:
+  generator: false
   alternate:
     - name: 🇬🇧 English
       link: https://docs.photoprism.app/
@@ -104,7 +105,7 @@ site_dir: site
 # Project information.
 site_name: PhotoPrism
 site_description: Dokumentation
-site_author: PhotoPrism
+site_author: PhotoPrism UG
 site_url: https://docs-de.photoprism.app/
 
 # Repository information.
@@ -129,8 +130,7 @@ theme:
   # Default values, taken from mkdocs_theme.yml
   language: de
   features:
-    - tabs
-    #- instant
+    - navigation.top
   palette:
     scheme: default
     primary: white
@@ -144,6 +144,13 @@ theme:
 
 plugins:
   - search
+  - redirects:
+      redirect_maps:
+        'team.md': 'https://photoprism.app/team'
+        'funding.md': 'https://photoprism.app/membership'
+        'privacy.md': 'https://photoprism.app/privacy'
+        'terms.md': 'https://photoprism.app/terms'
+        'code-of-conduct.md': 'https://photoprism.app/code-of-conduct'
 
 # MkDocs extensions.
 markdown_extensions:
@@ -172,7 +179,6 @@ markdown_extensions:
   - pymdownx.keys
   - pymdownx.magiclink
   - pymdownx.mark
-  - pymdownx.smartsymbols
   - pymdownx.snippets:
       check_paths: true
   - pymdownx.superfences
@@ -182,3 +188,6 @@ markdown_extensions:
       custom_checkbox: true
       clickable_checkbox: true
   - pymdownx.tilde
+  - attr_list
+  - abbr
+  - md_in_html
