--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,16 +44,18 @@ nav:
       - Ordner: user-guide/organize/folders.md
       - Panoramas: user-guide/organize/panoramas.md
       - Scans: user-guide/organize/scans.md
-  - Linkfreigabe:
-      - Alben: user-guide/share/share.md
+  - Teilen:
+      - Linkfreigabe: user-guide/share/share.md
+      - Mit Apps: user-guide/share/services-share.md
   - Fern-Synchronisation:
-      - WebDAV Verbindung:  user-guide/sync/webdav.md
+      - WebDAV Zugriff:  user-guide/sync/webdav.md
       - Smartphones:  user-guide/sync/sync-phone.md
+      - Andere Apps:  user-guide/sync/services-sync.md
   - Einstellungen:
       - Allgemein: user-guide/settings/general.md
       - Dateien: user-guide/settings/library.md
       - Erweitert: user-guide/settings/advanced.md
-      - Sync:  user-guide/settings/sync.md
+      - Dienste:  user-guide/settings/sync.md
       - Konto: user-guide/settings/account.md
       #- Places: user-guide/settings/places.md
   - Backup Anleitung:
