User Guide: Add docs for rotate functionality

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ nav:
       - Überprüfen: user-guide/organize/review.md
       - Bildstapel: user-guide/organize/stacks.md
       - Metadaten bearbeiten: user-guide/organize/edit.md
+      - Bilder drehen: user-guide/organize/rotate.md
       - Herunterladen: user-guide/organize/download.md
       - Videos: user-guide/organize/video.md
       - Orte: user-guide/organize/places.md
