Add "content.tooltips" feature to mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,6 +140,7 @@ theme:
   language: de
   features:
     - content.action.edit
+    - content.tooltips
     - navigation.top
   palette:
     scheme: default
