--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,8 @@ nav:
   - Benutzer verwalten:
       - Admin Web UI: user-guide/users/index.md
       - CLI Commands: user-guide/users/cli.md
+      - Benutzer Rollen: user-guide/users/roles.md
+      - Teilen mit Gastnuztern: user-guide/users/sharing.md
       - Mehrere Bibliotheken: user-guide/users/libraries.md
   - Cloud Migration:
       - Google Photos: user-guide/use-cases/google.md
